gst/isomp4/qtdemux.h
@@ -89,6 +89,7 @@ struct _GstQTDemux {
   gboolean posted_redirect;
 
   /* push based variables */
+  gboolean pending_configure;
   guint neededbytes;
   guint todrop;
   GstAdapter *adapter;
